--- a/Ramadhan-Mubarak-master/index.html
+++ b/Ramadhan-Mubarak-master/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,20 @@
     <title>Happy Mubarak</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <section id="particles-js">
+        <div class="logo">
+            <img src="./assets/img/jk.jpg" alt="Logo">
+        </div>
         <div class="text">
             <h2>Ramadhan Mubarak<br><span>To You, Your Family & Friends!</span></h2>
         </div>
         <div class="mosque"></div>
     </section>
 
-
     <script src="./assets/js/particles.js"></script>
     <script src="./assets/js/app.js"></script>
 </body>
+
 </html>
