--- a/Ramadhan-Mubarak-master/index.html
+++ b/Ramadhan-Mubarak-master/index.html
@@ -16,6 +16,8 @@
         </div>
         <div class="text">
             <h2>Ramadhan Mubarak<br><span>To You, Your Family & Friends!</span></h2>
+            <br>
+            <h3>Shakil Ahmad Kakvi</h3>
         </div>
         <div class="mosque"></div>
     </section>
