--- a/Ramadhan-Mubarak-master/index.html
+++ b/Ramadhan-Mubarak-master/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Mubarak</title>
+    <title>Ramadan-Kareem Wishes From Jamia kainat</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -15,7 +15,7 @@
             <img src="./assets/img/jk.jpg" alt="Logo">
         </div>
         <div class="text">
-            <h2>Ramadhan Mubarak<br><span>To You, Your Family & Friends!</span></h2>
+            <h2>Ramadhan Mubarak<br><span style="color: aqua;">To You, Your Family & Friends!</span></h2>
             <br>
             <h3>Shakil Ahmad Kakvi</h3>
         </div>
